--- a/style.css
+++ b/style.css
@@ -5,3 +5,14 @@ img {
     width: 100px;
     height: 100px;
   }
+
+h1 {
+  font-size: 48px;
+  color: #F9FAF8;
+  weight:900
+}
+
+p,a {
+ font-size: 18px;
+ color: #E5E7EB;
+}
