--- a/style.css
+++ b/style.css
@@ -1,3 +1,6 @@
+*{
+  font-family: Arial, Helvetica, sans-serif;
+}
 .hero, .footer{
   background-color:#1f2937;
 }
@@ -6,13 +9,17 @@ img {
     height: 100px;
   }
 
-h1 {
+h1,.logo{
   font-size: 48px;
   color: #F9FAF8;
-  weight:900
+  font-weight:900
 }
 
 p,a {
  font-size: 18px;
  color: #E5E7EB;
+}
+
+.header.logo{
+  font-size: 24px;
 }
