--- a/style.css
+++ b/style.css
@@ -20,6 +20,11 @@ p,a {
  color: #E5E7EB;
 }
 
+.header{
+  display: flex;
+  justify-content: space-between;
+}
+
 .header.logo{
   font-size: 24px;
 }
