--- a/style.css
+++ b/style.css
@@ -1,5 +1,10 @@
 *{
   font-family: Arial, Helvetica, sans-serif;
+  box-sizing: border-box;
+}
+
+div.container{
+  padding: 0px;
 }
 .hero, .footer{
   background-color:#1f2937;
@@ -9,16 +14,18 @@ img {
     height: 100px;
   }
 
+  p,a.link {
+    font-size: 18px;
+    color: #E5E7EB;
+    font-weight:100;
+   }
+   
 h1,.logo{
   font-size: 48px;
   color: #F9FAF8;
-  font-weight:900
+  font-weight:900;
 }
 
-p,a {
- font-size: 18px;
- color: #E5E7EB;
-}
 
 .header{
   display: flex;
@@ -27,4 +34,26 @@ p,a {
 
 .header.logo{
   font-size: 24px;
+}
+ul{
+  display: flex;
+  justify-content: space-evenly;
+  gap:25px;
+  list-style-type: none;
+}
+.link{
+  text-decoration: none;
+}
+button{
+  color:#E5E7EB;
+  background-color: #3882f6;
+  font-weight: 900;
+  padding: 5px 25px;
+}
+img.rocket{
+  width: 300px;
+  height:200px;
+}
+div.secondary{
+  display: 
 }
