--- a/style.css
+++ b/style.css
@@ -3,11 +3,9 @@
   box-sizing: border-box;
 }
 
-div.container{
-  padding: 0px;
-}
 .hero, .footer{
   background-color:#1f2937;
+  padding: 15px 150px;
 }
 img {
     width: 100px;
@@ -40,6 +38,7 @@ ul{
   justify-content: space-evenly;
   gap:25px;
   list-style-type: none;
+  align-items: flex-start;
 }
 .link{
   text-decoration: none;
@@ -71,4 +70,8 @@ h2{
   font-weight: 900;
   color: #1f2937;
   text-align: center;
+}
+.tertiary{
+  display: flex;
+  justify-content: space-around;
 }
