add text class to all text under tertiary
contain both image and text in a div foe every item

--- a/style.css
+++ b/style.css
@@ -38,7 +38,6 @@ ul{
   justify-content: space-evenly;
   gap:25px;
   list-style-type: none;
-  align-items: flex-start;
 }
 .link{
   text-decoration: none;
@@ -74,4 +73,5 @@ h2{
 .tertiary{
   display: flex;
   justify-content: space-around;
+  padding: 0 150px;
 }
