--- a/style.css
+++ b/style.css
@@ -90,3 +90,9 @@ img {
   border:2px solid #3882f6;
   border-radius: 10px;
 }
+
+.inspiration {
+  background-color: #e5e7eb;
+  margin: 100px 0;
+  padding: 100px 150px;
+}
