--- a/style.css
+++ b/style.css
@@ -44,6 +44,7 @@ ul {
 }
 .link {
   text-decoration: none;
+  display: flex; align-items:center ;
 }
 button {
   color:#E5E7EB;
@@ -57,18 +58,17 @@ button {
 }
 
 div.secondary {
-  display:flex;
-  ;
-  ;
-  outline: 2px solid red;
+  display: flex;
+  padding: 50px 0;
 }
 
 img.rocket {
   display: flex;
   align-items: flex-start ;
-  width: 300px;
-  height:200px;
-  outline: 2px solid red;
+  width: 700px;
+  height:300px;
+  border: 0;border-radius: 0;
+  padding-left: 50px;
 }
 h2 {
   font-size: 36px;
@@ -87,6 +87,7 @@ h2 {
   text-wrap: wrap;
   text-align: center;
   width: 150px;
+  font-size: 18px;
 }
 
 img {
@@ -119,15 +120,19 @@ img {
 .ad {
   background-color: #3882f6;
   color: #E5E7EB;
-  padding: 50px 160px;
+  padding: 30px 160px;
   margin: 150px;
   border-radius: 10px;
   font-size: 18px;
   display: flex;
+  
 }
 
 .ad button {
   border: 3px solid #F9FAF8;
   display: flex;
+  flex: none;
   align-items: center;
+  align-self: center;
+  margin: 0 auto;
 }
