--- a/style.css
+++ b/style.css
@@ -1,10 +1,8 @@
 *{
   box-sizing: border-box;
-}
-
-body{
   font-family: Roboto, sans-serif;
 }
+
 
 .hero, .footer{
   background-color:#1f2937;
@@ -27,15 +25,16 @@ h1,.logo {
   font-weight:900;
 }
 
-
 .header {
   display: flex;
   justify-content: space-between;
+  align-items: flex-start;
 }
 
 .header.logo {
   font-size: 24px;
 }
+
 ul {
   display: flex;
   justify-content: space-evenly;
@@ -44,11 +43,11 @@ ul {
 }
 .link {
   text-decoration: none;
-  display: flex; align-items:center ;
 }
 button {
   color:#E5E7EB;
   background-color: #3882f6;
+  border:5px solid #3882f6;
   font-weight: 900;
   padding: 5px 25px;
   width: 100px;
@@ -59,7 +58,7 @@ button {
 
 div.secondary {
   display: flex;
-  padding: 50px 0;
+  padding: 100px 0;
 }
 
 img.rocket {
